--- a/Week-03/css/styles.css
+++ b/Week-03/css/styles.css
@@ -55,26 +55,47 @@ header {
 }
 
 .form-group {
+    width: 1512;
+    height: 515;
+    background-color: #373867;
+    color: #fff;
 
 
 }
 
+.form-group textarea {
+    padding-bottom: 30px;
+}
+
+.form-group input {
+    display: block;
+    padding: 5px;
+    width: 50px;
+
+}
 
 .history {
-    position: center;
     display: inline-block;
-    font-size: 50;
     width: 1512px;
     height: 362px;
     background-color: #AACE9B;
+    color: #fff;
 }
 .history h3 {
     text-transform: uppercase;
+    font-size: 50px;
+    font-weight: bolder;
+    
+}
+
+.history p{
+    font-weight: bolder;
+    font-size: 50px;
 }
 
 .activities {
-    float: inline-end;
-    display: inline;
+    float: inline-block;
+    font-size: 24px;
     
 }
 
@@ -85,6 +106,8 @@ header {
 }
 .footer h5 {
     float: left;
+    font-size: 32px;
+    
 
 }
 
