--- a/Week-03/css/styles.css
+++ b/Week-03/css/styles.css
@@ -1,6 +1,6 @@
 /* Body */
 body {
-    font-family: Roboto, 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
+    font-family: 'Roboto', 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
     width: 1512px;
         
 
@@ -31,24 +31,25 @@ header {
 
 /************ Aside ************/
 .side-bar {
-    
+    display: block;
     text-align: center;
     width: 427px;
     height: 1068px;
     padding: 15px;
-    margin: 23px;
+    margin: 30px;
     font-size: 32px;
-    
+    background-color: #fff;
 }
 
 .side-bar h3 {
     text-align: center;
     font-size: 32px;
+    margin-top: 42px;
 }
 
 .side-bar li {
-    text-align: center;
-    text-transform: uppercase;
+    text-align: left;
+    
     font-size: 32px;
     background-color: #51A884;
 }
@@ -59,50 +60,96 @@ header {
     text-transform: uppercase;
 }
 
-.side-bar a {
-    text-decoration: none;
+.side-bar input {
+    width: 370px;
+    height: 67px;
+    margin-top: 20px;
+    margin-left: 23px;
+    margin-right: 34px;
+    margin: 30px;
+    padding: 20px;
+    background-color: #51A884;
     color: #fff;
+    text-transform: uppercase;
+    font-size: 32px;
+    text-align: center;
 }
 
 .sidebar-contact {
-    display: inline-block;
+    display: block;
     width: 370px;
-    height: 409;
+    height: 409px;
+    padding: 20px;
     background-color: #51A884;
+    color: #fff;
     font-size: 27px;
-
+    margin-left: 23px;
+    margin: 30px;
 }
 
+
+.sidebar-contact img {
+    position:relative;
+    display: block;
+    text-align: right;
+    margin-left: 12px;
+}
+
+.sidebar-contact li {
+    display: inline-block;
+    font-size: 27;
+}
     
 /************ Main ************/
 
+
 .getfit {
     display: inline-block;
-    background-color: #D9D9D9;
-    width: 1512px;
+    height: 247px;
+    width: 1034px;
     height: 471px;
+    margin-bottom: 57px;
 }
 
 .getfit h2 {
     font-size: 42px;
     text-transform: uppercase;
     font-weight: bolder;
+    padding-left: 84px;
+    margin-top: 36px;
+    margin-bottom: 9px;
 }
 .getfit h3 {
     font-size: 32px;
     font-weight: bold;
+    padding-left: 84px;
 }
 .getfit p {
+    display: inline-block;
     font-size: 23px;
-    width: 900px;
-    margin-right: 394px;
+    padding-left: 84px;
+    
     
 }
-.strong img {
+
+.training {
     display: inline-block;
-    margin-top: 118px;
+}
+.training img {
+    display: inline-block;
+    width: 267px;
+    height: 236px;
+    margin-top: 117px;
+    margin-bottom: 118px;
+    margin-left: 64px;
     margin-right: 63px;
-    
+}
+
+.strong {
+    display: inline-block;
+    width: 1512px;
+    height: 471;
+    background-color: #D9D9D9;
 }
 
 /* Options */
@@ -115,9 +162,24 @@ header {
 .options {
     display: inline-block; 
     font-size: 30px;
-    width: 623px;
+    width: 670px;
+    margin-left: 69px;
 }
 
+.option div {
+    float: left;
+    width: 25px;
+    box-sizing: border-box;
+}
+
+.options p {
+    text-align: justify;
+}
+
+.options input {
+    background-color: #AACE9B;
+    text-emphasis-color: #fff;
+}
 
 .options img, h3 {
     display: inline-block;
@@ -211,12 +273,16 @@ header {
 
 /* Activities */
 
-.activities div {
+.activities {
     display: inline-block;
     font-size: 24px;
     background-color: #D9D9D9;
+    margin: 10px;
 }
+.activities div {
+    display: inline-block;
 
+}
 
 /************ Footer ************/
 
