--- a/Week-03/css/styles.css
+++ b/Week-03/css/styles.css
@@ -2,8 +2,6 @@
 body {
     font-family: 'Roboto', 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
     width: 1512px;
-        
-
 
 }
 
@@ -31,10 +29,7 @@ header {
 
 /************ Aside ************/
 .side-bar {
-    display: block;
-    text-align: center;
     width: 427px;
-    height: 1068px;
     padding: 15px;
     margin: 30px;
     font-size: 32px;
@@ -46,10 +41,11 @@ header {
     font-size: 32px;
     margin-top: 42px;
 }
+.side-bar a {
+    text-decoration: none;
 
+}
 .side-bar li {
-    text-align: left;
-    
     font-size: 32px;
     background-color: #51A884;
 }
@@ -62,7 +58,6 @@ header {
 
 .side-bar input {
     width: 370px;
-    height: 67px;
     margin-top: 20px;
     margin-left: 23px;
     margin-right: 34px;
@@ -75,11 +70,15 @@ header {
     text-align: center;
 }
 
+.sidebar-menu a {
+    border: #373867;
+    border-top: 10px;
+
+}
+
 .sidebar-contact {
-    display: block;
     width: 370px;
-    height: 409px;
-    padding: 20px;
+    padding: 0px;
     background-color: #51A884;
     color: #fff;
     font-size: 27px;
@@ -87,6 +86,19 @@ header {
     margin: 30px;
 }
 
+.contact-img {
+    display: inline-block;
+    position:relative;
+    right:40px;
+}
+
+.contact-id {
+    position:relative;
+    padding: 0px;
+    left:40px;
+    display: inline-block;
+    width: 100%;
+}
 
 .sidebar-contact img {
     position:relative;
@@ -98,6 +110,7 @@ header {
 .sidebar-contact li {
     display: inline-block;
     font-size: 27;
+    text-align: right;
 }
     
 /************ Main ************/
@@ -128,8 +141,14 @@ header {
     display: inline-block;
     font-size: 23px;
     padding-left: 84px;
-    
-    
+}
+
+.getfit img{
+    width: 267px;
+    height: 236px;
+    margin-top: 117px;
+    margin-bottom: 118px;
+    margin-right: 63px;
 }
 
 .training {
@@ -187,6 +206,11 @@ header {
 
 /* Forms */
 
+.box-forms {
+    width: 1512px;
+    height: 515px;
+}
+
 .form-group {
     width: 1512;
     height: 515;
@@ -198,8 +222,7 @@ header {
 .form-group h3 {
     margin-top: 42px;
     margin-left: 80px;
-    font-size: 60px;
-    
+    font-size: 60px; 
 }
 
 .form-group input {
@@ -248,6 +271,11 @@ header {
 
 /* History */
 
+.box-history {
+    width: 1512px;
+    height: 364px;
+}
+
 .history {
     display: inline-block;
     width: 1512px;
@@ -268,20 +296,32 @@ header {
     font-weight: bolder;
     font-size: 50px;
     margin-left: 76px;
-    margin-bottom: ;
+    margin-bottom: 20px;
+    margin-top: 0px;
+    margin-right: 67px;
+  
 }
 
 /* Activities */
 
 .activities {
-    display: inline-block;
+    overflow-x: hidden;
     font-size: 24px;
     background-color: #D9D9D9;
-    margin: 10px;
+    margin: 0px;
+    padding-top: 120px;
+    
 }
 .activities div {
-    display: inline-block;
+    float: left;
+    width: 25%;
+    box-sizing: border-box;
+    padding: 15px;
+}   
 
+.activities h4 {
+    border:#D9D9D9;
+    border-top: 10px;
 }
 
 /************ Footer ************/
@@ -295,8 +335,9 @@ header {
 .footer h5 {
     float: left;
     font-size: 32px;
-    
-
+    margin-left: 45px;
+    margin-top: 47px;
+    margin-bottom: 18px;
 }
 
 .social {
@@ -307,14 +348,4 @@ header {
 
 .social img {
     margin-right: 52px;
-
-}
-
-/*.footers{
-    position: right;
-    display: inline-block;
-    background-color: #AACE9B;
-    width: 133;
-    height: 1512;
-
 }
