--- a/Week-04/css/styles.css
+++ b/Week-04/css/styles.css
@@ -2,6 +2,7 @@
 
 body {
     width: 100vw;
+    font-family: roboto;
     
 }
 
@@ -13,14 +14,11 @@ header {
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
-
 }
 
 .header-logo {
     display: flex;
     height: fit-content;
-
-    
 }
 
 .header-logo img {
@@ -49,7 +47,6 @@ aside {
 .side-bar {
     display: flex;
     justify-content: center;
-
 }
 
 .side-bar h3 {
@@ -62,7 +59,6 @@ aside {
 .side-bar img {
     
     display: flex
-    
 }
 
 .menu-li {
@@ -120,6 +116,8 @@ aside {
 /************ Get-Fit-Box ************/
 
 .strong {
+    display: flex;
+    flex-direction: column;
     background-color: #D9D9D9;
 }
 
@@ -147,14 +145,8 @@ aside {
 }
 
 .strong img {
-    display: flex;
-    width: 248px;
     height: 267px;
-    text-align: center;
-    justify-content: center;
-    margin-left: 70px;
-    margin-top: 0px;
-    padding-top: 0px;
+    margin: 0 auto;
 }
 
 /************ Options-Box ************/
@@ -174,10 +166,16 @@ aside {
 }
 
 .options h3 {
-    border:darkred;
-    padding: 10px;
+    width: 342.77px;
+    height: 67px;
+    background-color: #88a47c;
     color: #fff;
+    border-radius: 5px;
+    border: 1px solid black;
+    text-align: center;
     font-size: 30px;
+    font-weight: 200;
+    box-shadow: 0 2px 3px rgb(0 0 0 / 50%);
 }
 
 .options p {
@@ -190,6 +188,7 @@ aside {
 .box-forms {
     display: flex;
     flex-direction: column;
+    width: 100%;
     justify-content: center;
     background-color: #373867;
 }
@@ -202,35 +201,54 @@ aside {
     text-transform: uppercase;
     font-weight: bold;
     color:#fff;
-    padding: 10px;
-    padding-right: 20px;
+    padding: 20px;
 }
 
-.form-group textarea {
+.form-group {
     display: flex;
-    justify-content: center;
-    
-
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
 }
 
-.form-group img {
+.text-area {
     display: flex;
-    flex-direction: row;
-    height: 38px;
-    width: 90px;
-    
+    width: 312px;
+    height: 122px;
 }
 
-.form-data input {
+.form-data {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.form-data input, select {
+    
+    margin-bottom: 25px;
+    width: 312px;
+    padding: 10px 0;
+}
+
+.form-buttons, button {
+    display: flex;
+    align-items: center;
     justify-content: center;
+    width: 312px;
+    background-color: #373867;
+    text-decoration: none;
+    margin: 5px;
     
 }
 
-.form-data select {
-    display: flex;
+.form-buttons img {
+    width: 90px;
+    height: 37px;
+}
+
+::placeholder
+.input option {
+    color: #AACE9B
 }
 
 /************ History-Box ************/
@@ -260,13 +278,16 @@ aside {
 .activities {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     background-color: #D9D9D9;
+    gap: 15px;
+    padding: 15px 0;
 }
 
 .activities-box {
     display: flex;
     flex-direction: column;
-    text-align: justify;
+    align-items: center;
 }
 
 .activities-box h4 {
@@ -274,26 +295,28 @@ aside {
     text-align: center;
     text-transform: capitalize;
     font-weight: bold;
+    padding-bottom: 10px;
 }
 
 .activities-li {
-    display: flex;
-    flex-direction:column;
     font-size: 16px;
-    text-align: justify;
 }
 
 .activities h4 {
     font-size: 20px;
     text-align: center;
-
+    padding-bottom: 10px;
+    text-transform: capitalize;
+    font-weight: bold;
 }
 
 .memberships-li {
     display: flex;
     flex-direction: column;
+    align-items: justify;
     font-size: 15px;
-    text-align: justify;
+    padding-left: 40px;
+    padding-right: 50px;
 }
 
 /************ Footer-Box ************/
@@ -307,21 +330,26 @@ aside {
 .footer h5 {
     font-size: 12px;
     text-align: center;
-    padding: 20px;
+    padding: 15px;
 }
 
 .social {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
     padding-bottom: 5px;   
 }
 
 .social img{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    padding: 0 16px;
     align-self: center;
     width: 34px;
     height: 34px;
+}
+
+
+@media only screen and(min-width 600px) {
+    
 }
