--- a/Week-04/css/styles.css
+++ b/Week-04/css/styles.css
@@ -108,6 +108,9 @@ aside {
 }
 
 .contact-id li {
+    display: flex;
+    text-align: center;
+    justify-content: center;
     font-size: 20px;
     color: #fff;
     margin: 10px;
@@ -267,10 +270,11 @@ aside {
 }
 
 .history p {
-    font-size: 24px;
-    text-align: justify;
+    display: flex;
+    text-align: center;
     padding: 25px;
     color: #fff;
+    font-size: 24px;
 }
 
 /************ Activities-Box ************/
@@ -310,12 +314,13 @@ aside {
     font-weight: bold;
 }
 
-.memberships-li {
+.memberships {
     display: flex;
     flex-direction: column;
-    align-items: justify;
+    text-align: justify;
+    align-items: center;
     font-size: 15px;
-    padding-left: 40px;
+    padding-left: 70px;
     padding-right: 50px;
 }
 
