--- a/Week-04/css/styles.css
+++ b/Week-04/css/styles.css
@@ -18,47 +18,49 @@ header {
 
 .header-logo {
     display: flex;
-    height: fit-content;
+    justify-content: center;
+    align-items: center;
+    
 }
 
 .header-logo img {
     display: flex;
     justify-content: center;
-    padding: 10px;
+    align-items: center;
+    margin-right: 20px;
+    padding-right: 50px;
 }
 
 .btn-menu {
-    justify-content:flex-start;
-    width: 44px;
-    height: 34px;
-    padding-top: 5px;
+    display: flex;
+    justify-content:center;
+    align-items: center;
 }
+
 
 /************ Aside-Box ************/
 
 aside {
-    display:flex;
+    display:none;
     flex-direction: column;
     justify-content: center;
     height: 847px;
     background-color: #DCEEE6;
 }
 
-.side-bar {
-    display: flex;
-    justify-content: center;
-}
-
 .side-bar h3 {
+    float: left;
     text-align: center;
     font-size: 32px;
     text-transform: uppercase;
     font-weight: bold;
+    margin-left: 40%;
 }
 
 .side-bar img {
-    
-    display: flex
+    float: right;
+    margin-right: 10px;
+    margin-bottom: 30px;  
 }
 
 .menu-li {
@@ -178,6 +180,7 @@ aside {
     text-align: center;
     font-size: 30px;
     font-weight: 200;
+    margin-bottom: 10px;
     box-shadow: 0 2px 3px rgb(0 0 0 / 50%);
 }
 
@@ -247,11 +250,6 @@ aside {
 .form-buttons img {
     width: 90px;
     height: 37px;
-}
-
-::placeholder
-.input option {
-    color: #AACE9B
 }
 
 /************ History-Box ************/
@@ -354,7 +352,116 @@ aside {
     height: 34px;
 }
 
+/************ Queries ************/
 
-@media only screen and(min-width 600px) {
+/************ Header ************/
+
+@media only screen and (min-width: 600px) {
+    header {
+        height: 169px;
+    }
     
+    .header-logo {
+        justify-content: center;
+    }
+    
+    .btn-menu {
+        padding-left: 12px;
+        margin-left: 12px;
+    }
+}
+
+/************ Get-Fit Section ************/
+
+@media only screen and (min-width: 600px) {
+    
+    .get-fit {
+        padding: 12px;
+        margin: 12px;
+    }
+
+    .get-fit h2 {
+        font-size: 37px;
+        text-transform: uppercase;
+        justify-content: center;
+        text-align: left;
+        font-weight: bolder;
+        padding: 10px;
+    }
+    
+    .get-fit h3 {
+        font-size: 29px;
+        font-weight:bold;
+        text-align: left;
+        padding-left: 10px;
+    }
+    
+    .get-fit p {
+        font-size: 20px;
+        text-align: left;
+        font-weight: lighter;
+        margin: 10 0px;
+        padding: 10 0px;
+    }
+    
+    .strong {
+        flex-direction: row;
+    }
+
+    .strong img {
+        height: 182px;
+        margin: 0 auto;
+        justify-content: center;
+}
+}
+
+/************ Options Section ************/
+
+@media only screen and (min-width: 600px) {
+    
+    .option-container {
+        background-color: #AACE9B;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        padding: 10px;
+    }
+
+    .option-container div {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: center;
+        width: 40%;
+        height: 40%;
+        margin: 10px;  
+    }
+
+    .titles {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: initial;
+        align-items: center;
+        width: 100%;
+    }
+
+    .options h3 {
+        width: 342.77px;
+        height: 65px;
+        background-color: #88a47c;
+        color: #fff;
+        border-radius: 5px;
+        border: 1px solid black;
+        text-align: center;
+        font-size: 22px;
+        font-weight: 200;
+        margin-bottom: 10px;
+        box-shadow: 0 2px 3px rgb(0 0 0 / 50%);
+    }
+
+    .options p {
+        display: flex;
+        
+        color:#fff;
+    }
 }
