--- a/Week-04/css/styles.css
+++ b/Week-04/css/styles.css
@@ -38,7 +38,7 @@ header {
 }
 
 
-/************ Aside-Box ************/
+/************ Aside Section ************/
 
 aside {
     display:none;
@@ -118,7 +118,7 @@ aside {
     margin: 10px;
 }
 
-/************ Get-Fit-Box ************/
+/************ Get-Fit Section ************/
 
 .strong {
     display: flex;
@@ -154,7 +154,7 @@ aside {
     margin: 0 auto;
 }
 
-/************ Options-Box ************/
+/************ Options Section ************/
 
 .option-container {
     background-color: #AACE9B;
@@ -170,7 +170,7 @@ aside {
     width: 100%;
 }
 
-.options h3 {
+.titles h3 {
     width: 342.77px;
     height: 67px;
     background-color: #88a47c;
@@ -179,7 +179,7 @@ aside {
     border: 1px solid black;
     text-align: center;
     font-size: 30px;
-    font-weight: 200;
+    font-weight: 400;
     margin-bottom: 10px;
     box-shadow: 0 2px 3px rgb(0 0 0 / 50%);
 }
@@ -189,7 +189,7 @@ aside {
     color:#fff
 }
 
-/************ Forms-Box ************/
+/************ Forms Section ************/
 
 .box-forms {
     display: flex;
@@ -244,7 +244,7 @@ aside {
     background-color: #373867;
     text-decoration: none;
     margin: 5px;
-    
+    justify-content: center;
 }
 
 .form-buttons img {
@@ -252,7 +252,7 @@ aside {
     height: 37px;
 }
 
-/************ History-Box ************/
+/************ History Section ************/
 
 .box-history {
     display: flex;
@@ -275,7 +275,7 @@ aside {
     font-size: 24px;
 }
 
-/************ Activities-Box ************/
+/************ Activities Section ************/
 
 .activities {
     display: flex;
@@ -292,7 +292,7 @@ aside {
     align-items: center;
 }
 
-.activities-box h4 {
+.activities-box h3 {
     font-size: 30px;
     text-align: center;
     text-transform: capitalize;
@@ -322,7 +322,7 @@ aside {
     padding-right: 50px;
 }
 
-/************ Footer-Box ************/
+/************ Footer  ************/
 
 .footer {
     display: flex;
@@ -353,6 +353,8 @@ aside {
 }
 
 /************ Queries ************/
+
+/************ Breakpoint 600px ************/
 
 /************ Header ************/
 
@@ -418,7 +420,7 @@ aside {
 /************ Options Section ************/
 
 @media only screen and (min-width: 600px) {
-    
+
     .option-container {
         background-color: #AACE9B;
         display: flex;
@@ -437,31 +439,99 @@ aside {
         margin: 10px;  
     }
 
-    .titles {
+    div.titles {
         display: flex;
-        flex-direction: row;
-        flex-wrap: initial;
-        align-items: center;
+        flex-flow: row;
         width: 100%;
     }
 
-    .options h3 {
-        width: 342.77px;
-        height: 65px;
+    .titles h3 {
+        width: 342px;
+        height: 50px;
         background-color: #88a47c;
         color: #fff;
         border-radius: 5px;
         border: 1px solid black;
         text-align: center;
+        justify-content: center;
         font-size: 22px;
-        font-weight: 200;
+        font-weight: 400;
         margin-bottom: 10px;
         box-shadow: 0 2px 3px rgb(0 0 0 / 50%);
     }
 
     .options p {
         display: flex;
-        
+        text-align: left;
         color:#fff;
+        padding-left: 15px;
     }
+}
+
+/************ History Section ************/
+
+@media only screen and (min-width: 600px) {
+    
+    .history h3 {
+        padding-top: 10px;
+    }
+    
+    .history p {
+        display: flex;
+        text-align: justify;
+        padding: 30px;
+        color: #fff;
+        font-size: 24px;
+}
+}
+
+/************ Activities Section ************/
+
+@media only screen and (min-width: 600px) {
+    
+    .activities-box {
+        display: flex;
+        flex-direction: column;
+        justify-content: left;
+    }
+    
+    .activities-box h3 {
+        font-size: 30px;
+        text-align: center;
+        text-transform: capitalize;
+        font-weight: bold;
+        padding-bottom: 10px;
+    }
+    
+    .activities h4 {
+        font-size: 20px;
+        text-align: left;
+        padding-bottom: 10px;
+        text-transform: capitalize;
+        font-weight: bold;
+    }
+
+    .activity-list li {
+        font-size: 20px;
+        font-weight: normal;
+    }
+    
+    .memberships {
+        display: flex;
+        flex-direction: column;
+        text-align: left;
+        font-size: 15px;
+        padding-left: 70px;
+        padding-right: 50px;
+    }
+}
+
+/************ Queries ************/
+
+/************ Breakpoint 1024px ************/
+
+@media only screen and (min-width: 1024px) {
+
+    
+
 }
