--- a/Week-04/css/styles.css
+++ b/Week-04/css/styles.css
@@ -37,14 +37,13 @@ header {
     align-items: center;
 }
 
-
 /************ Aside Section ************/
 
 aside {
     display:none;
     flex-direction: column;
     justify-content: center;
-    height: 847px;
+    height: 100%;
     background-color: #DCEEE6;
 }
 
@@ -171,7 +170,7 @@ aside {
 }
 
 .titles h3 {
-    width: 342.77px;
+    width: 342px;
     height: 67px;
     background-color: #88a47c;
     color: #fff;
@@ -412,7 +411,7 @@ aside {
 
     .strong img {
         height: 182px;
-        margin: 0 auto;
+        margin: auto 30px;
         justify-content: center;
 }
 }
@@ -526,12 +525,280 @@ aside {
     }
 }
 
-/************ Queries ************/
-
 /************ Breakpoint 1024px ************/
 
-@media only screen and (min-width: 1024px) {
+/************ Header ************/
 
+@media only screen and (min-width: 1024px) {
+    
+    header {
+        height: 159px;
+    }
+
+    body {
+        margin-left: 30vw;
+        width: 70vw;
+        overflow-x: hidden;
+    }
+
+    .btn-menu {
+        display: none;
+        padding-left: 12px;
+        margin-left: 12px;
+    }
+
+/************ Header ************/    
+
+    aside {
+        display: flex;
+        flex-direction: column;
+        justify-content: left;
+        max-width: 30vw;
+        overflow-x: hidden;
+        position: fixed;
+        top: 0;
+        left: 0;
+        padding-top: 20px;
+
+    }
+    
+    .side-bar h3 {
+        float: left;
+        text-align: center;
+        font-size: 32px;
+        text-transform: uppercase;
+        font-weight: bold;
+        margin-left: 40%;
+    }
+    
+    .side-bar img {
+        float: right;
+        margin-right: 10px;
+        margin-bottom: 30px;  
+    }
+    
+    .menu-li {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        background-color: #51A884;
+        padding: 10px; 
+        margin-right: 72px;
+        margin-left: 63px;
+        margin-bottom: 30px;
+    }
+    
+    .menu-li a {
+        margin: 10px;
+        text-decoration: none;
+        font-size: 32px;
+        color: #fff;
+        text-transform:uppercase;
+    }
+    
+    .sidebar-contact {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        background-color: #51A884;
+        margin-right: 72px;
+        margin-left: 63px;
+        padding: 20px;
+        padding-bottom: 18px;
+    }
+    
+    .sidebar-contact h4 {
+        text-align: center;
+        font-size: 32px;
+        color: #fff;
+        text-transform: uppercase;
+    }
+    
+    .contact-id img {
+        display: flexbox;
+        text-align: center;
+        justify-content: center;
+        width: 45px;
+        height: 40px;
+    }
+    
+    .contact-id li {
+        display: flex;
+        text-align: center;
+        justify-content: center;
+        font-size: 20px;
+        color: #fff;
+        margin: 10px;
+    }
+    
+    
+    /************ Get-Fit Section ************/
+    
+    .get-fit {
+        padding: 12px;
+        margin: 12px;
+    }
+
+    .get-fit h2 {
+        font-size: 37px;
+        text-transform: uppercase;
+        justify-content: center;
+        text-align: left;
+        font-weight: bolder;
+        padding: 10px;
+    }
+    
+    .get-fit h3 {
+        font-size: 29px;
+        font-weight:bold;
+        text-align: left;
+        padding-left: 10px;
+    }
+    
+    .get-fit p {
+        font-size: 20px;
+        text-align: left;
+        font-weight: lighter;
+        margin: 10 0px;
+        padding: 10 0px;
+    }
+    
+    .strong {
+        flex-direction: row;
+    }
+
+    .strong img {
+        height: 182px;
+        margin: auto 50px;
+        justify-content: center;
+    }
+
+    /************ Options Section ************/
+
+    .option-container {
+        background-color: #AACE9B;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        padding: 10px;
+    }
+
+    .option-container div {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: center;
+        width: 40%;
+        height: 40%;
+        margin: 10px;  
+    }
+
+    div.titles {
+        display: flex;
+        flex-flow: row;
+        width: 100%;
+    }
+
+    .titles h3 {
+        width: 342px;
+        height: 50px;
+        background-color: #88a47c;
+        color: #fff;
+        border-radius: 5px;
+        border: 1px solid black;
+        text-align: center;
+        justify-content: center;
+        font-size: 22px;
+        font-weight: 400;
+        margin-bottom: 10px;
+        box-shadow: 0 2px 3px rgb(0 0 0 / 50%);
+    }
+
+    .options p {
+        display: flex;
+        text-align: left;
+        color:#fff;
+        font-size: 20px;
+        padding-left: 125px;
+    }
+
+    .box-forms {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        justify-content: center;
+        background-color: #373867;
+    }
+    
+    .form-group h3 {
+        display: flex;
+        align-items: center;
+        font-size: 24px;
+        text-align: center;
+        text-transform: uppercase;
+        font-weight: bold;
+        color:#fff;
+        padding: 20px;
+    }
+    
+    .form-group {
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .text-area {
+        
+        width: 312px;
+        height: 122px;
+    }
+    
+    .form-data {
+        display: flex;
+        flex-direction: column;
+        justify-content: left;
+    }
+    
+    .form-data input, select {
+        
+        margin-bottom: 25px;
+        width: 312px;
+        padding: 10px 0;
+    }
+    
+    .form-buttons, button {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 312px;
+        background-color: #373867;
+        text-decoration: none;
+        margin: 5px;
+        justify-content: center;
+    }
+    
+    .form-buttons img {
+        width: 90px;
+        height: 37px;
+    }
     
 
+    /************ History Section ************/
+    
+    .history h3 {
+        padding-top: 10px;
+    }
+    
+    .history p {
+        display: flex;
+        text-align: justify;
+        padding: 30px;
+        color: #fff;
+        font-size: 24px;
+    }
+
+
+    
 }
