BaSP-W06-2023: This commit is just to push some changes to keep working from another computer later.

--- a/Week-06/css/login.css
+++ b/Week-06/css/login.css
@@ -39,10 +39,17 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    width: 300px;
+    align-self: flex-start;
 }
 
 .title img {
     justify-content: left;
+    display: flex;
+    align-items: center;
+    height: 40px ;
+    width: 32px;
+    margin: 5%;
 }
 
 .title h1 {
