--- a/Week-06/views/login.html
+++ b/Week-06/views/login.html
@@ -5,42 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="../css/login.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/footer.css">
-    <script src="../js/login.js"></script>  
+    <link rel="stylesheet" href="/Week-06/css/login.css">
+    <link rel="stylesheet" href="/Week-06/css/header.css">
+    <link rel="stylesheet" href="/Week-06/css/footer.css">
+    <script defer src="/Week-06/js/login.js"></script>
 </head>
 <body>
     <header>
         <h1 class="header-logo">
-            <img src="../Assets/Images/logo.png" alt="MegaRocket">
+            <img src="/Assets/Images/logo.png" alt="MegaRocket">
         </h1>
         <h1 class="btn-menu">
-            <img src="../Assets/Images/icon.png" alt="a menu icon">
+            <img src="/Assets/Images/icon.png" alt="a menu icon">
         </h1>
     </header>
     <main class="main-login">
         <form>
             <div class="sign-in">
                 <div class="title">
-                    <img class="back" src="../Assets/Images/arrow.png" alt="back">
+                    <img class="back" src="/Assets/Images/arrow.png" alt="back">
                     <h1> 
                         Sign In
                     </h1>
                 </div>
-                <input type="text" placeholder="Email">
+                <input class="email" type="text" placeholder="Email">
                 <input type="text" placeholder="Contraseña">
                 <p>
+                    <a href="">
                     Have you forgotten the password?
+                    </a>
                 </p>
                 <p>
-                    <img src="../Assets/Images/Enabled.png" alt="click">
+                    <img src="/Assets/Images/Enabled.png" alt="click">
                     Remember me
                 </p>
                 <p>
                     Don't you have an account?
                 </p>
-                <p><a href="../views/sign-up.html">click here to become a member</a></p>
+                <p>
+                    <a href="/Week-06/views/sign-up.html">
+                        click here to become a member
+                    </a>
+                </p>
                 <button class="cont-login"> 
                     Continue
                 </button>
