--- a/Week-06/css/login.css
+++ b/Week-06/css/login.css
@@ -33,13 +33,37 @@ body {
 
 .sign-in input {
     width: 241px;
+    border: solid;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-color: #AACE9B;
+    margin: 13px;
+}
+
+.forgotten {
+    margin-top: 0;
+}
+
+.remember {
+    display: flex;
+    align-items: baseline;
+    text-align: left;
+}
+
+.remember img {
+    margin-right: 10px;
+}
+
+.create-account p {
+    margin: 0;
 }
 
 .title {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 300px;
+    width: 280px;
     align-self: flex-start;
 }
 
@@ -54,7 +78,23 @@ body {
 
 .title h1 {
     color: #2C8008;
-    font-size: 36px
+    font-size: 36px;
+    margin-top: 25%;
+}
+
+.click {
+    display: inline-block;
+    flex-direction: row;
+}
+
+.error {
+    display: block;
+    text-align: start;
+    color: red;
+}
+
+.hidden {
+    display: none;
 }
 
 .cont-login {
@@ -65,4 +105,5 @@ body {
     margin-bottom: 25px;
     border-radius: 8px;
     border-color: #AACE9B;
+    margin-top: 25px;
 }
