BaSP-W06-2023: Readme.md document was updated. layouts finished. the requirements document of the week 06 was added.

--- a/Week-06/views/index.html
+++ b/Week-06/views/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>MegaRocket-Eliezer Alberto</title>
+        <title>MegaRocket</title>
         <link rel="stylesheet" href="../css/reset.css">
         <link rel="stylesheet" href="../css/main.css">
         <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E">
@@ -14,7 +14,7 @@
     <body class="body">
         <header>
             <h1 class="header-logo">
-                <img src="../Assets/Images/logo.png" alt="MegaRocket">
+                <a href="/Week-06/views/index.html"><img src="/Assets/Images/logo.png" alt="MegaRocket"></a>
             </h1>
             <h1 class="btn-menu">
                 <img src="/Assets/Images/icon.png" alt="a menu icon">
@@ -25,22 +25,22 @@
                 <h3>
                     Menu
                 </h3>
-                <img src="../Assets/Images/icon-2.png">
+                <img src="/Assets/Images/icon-2.png">
             </div>
             <nav>
                 <div class="sidebar-menu">
                     <ul>
                         <li class="menu-li">
-                            <a href="#">Home</a>
+                            <a href="/Week-06/views/index.html">Home</a>
                         </li>
                         <li class="menu-li">
-                            <a href="#">Sign Up</a>
+                            <a href="/Week-06/views/sign-up.html">Sign Up</a>
                         </li>
                         <li class="menu-li">
-                            <a href="#">Log In</a>
+                            <a href="/Week-06/views/login.html">Log In</a>
                         </li>
                         <li class="menu-li">
-                            <a href="#">Info</a>
+                            <a href="/Week-06/views/index.html">Info</a>
                         </li>
                     </ul>
                 </div>
@@ -51,15 +51,15 @@
                     <div class="contact-img">
                         <ul class="contact-id">
                             <div class="contact-img">
-                                <img src="../Assets/Images/mail.png" alt="a letter icon">
+                                <img src="/Assets/Images/mail.png" alt="a letter icon">
                                 <li>
                                     information@untitled.tld
                                 </li>
-                                <img src="../Assets/Images/cellphone.png" alt="a celphone icon">
+                                <img src="/Assets/Images/cellphone.png" alt="a celphone icon">
                                 <li>
                                     (000) 00000-0000
                                 </li>
-                                <img src="../Assets/Images/address.png" alt="an address icon">
+                                <img src="/Assets/Images/address.png" alt="an address icon">
                                 <li>
                                     1233 Somewhere Road #8254Nashville, TN 00000-0000
                                 </li>
@@ -88,12 +88,12 @@
                         Join us and star your to a healthier, stronger you!
                     </p>
                 </div>
-                <img src="../Assets/Images/training.png" alt="a person training image">
+                <img src="/Assets/Images/training.png" alt="a person training image">
             </section>
             <section class="option-container">
                 <div class="options">
                     <div class="titles">
-                        <img src="../Assets/Images/appointment.png" alt="an appointment icon">
+                        <img src="/Assets/Images/appointment.png" alt="an appointment icon">
                         <h3>
                             Make an appointment
                         </h3>
@@ -105,7 +105,7 @@
                 </div>
                 <div class="options">
                     <div class="titles">
-                        <img src="../Assets/Images/membership.png" alt="a membership icon">
+                        <img src="/Assets/Images/membership.png" alt="a membership icon">
                         <h3>
                             Our memberships
                         </h3>
@@ -117,7 +117,7 @@
                 </div>
                 <div class="options">
                     <div class="titles">
-                        <img src="../Assets/Images/member.png" alt="a member icon">
+                        <img src="/Assets/Images/member.png" alt="a member icon">
                         <h3>
                             Become a Member
                         </h3>
@@ -129,7 +129,7 @@
                 </div>
                 <div class="options">
                     <div class="titles">
-                        <img src="../Assets/Images/suggestion.png" alt="a suggestion icon">
+                        <img src="/Assets/Images/suggestion.png" alt="a suggestion icon">
                         <h3>
                             Suggestions
                         </h3>
@@ -168,8 +168,8 @@
                         class="text-area" name="Description" placeholder="Your massage ...">
                     </textarea>
                     <div class="form-buttons">
-                        <button><img src="../Assets/Images/clear.png" alt="a cross icon"></button>
-                        <button><img src="../Assets/Images/send.png" alt="a send icon"></button>
+                        <button><img src="/Assets/Images/clear.png" alt="a cross icon"></button>
+                        <button><img src="/Assets/Images/send.png" alt="a send icon"></button>
                     </div>
                 </form>
             </section>
@@ -234,9 +234,9 @@
                     Copyright © 2023 MegaRocket SA. All rights reserved.
                 </h5>
                 <div class="social">
-                    <a href="https://www.linkedin.com/"><img src="../Assets/Images/linkedIn.png" alt="LinkedIn icon"></a>
-                    <a href="https://www.facebook.com/"><img src="../Assets/Images/facebook.png" alt="Facebooc icon"></a>
-                    <a href="https://www.instagram.com/"><img src="../Assets/Images/instagram.png" alt="Instagram icon"></a>
+                    <a href="https://www.linkedin.com/"><img src="/Assets/Images/linkedIn.png" alt="LinkedIn icon"></a>
+                    <a href="https://www.facebook.com/"><img src="/Assets/Images/facebook.png" alt="Facebooc icon"></a>
+                    <a href="https://www.instagram.com/"><img src="/Assets/Images/instagram.png" alt="Instagram icon"></a>
                 </div>
             </footer>
         </body>
