--- a/Week-06/css/footer.css
+++ b/Week-06/css/footer.css
@@ -1,11 +1,44 @@
 
+.footer {
+    display: flex;
+    flex-direction: column;
+    background-color: #AACE9B;
+    margin-top: 4%;
+}
+
+.footer h5 {
+    font-size: 12px;
+    text-align: center;
+    padding: 15px;
+}
+
+.social {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-bottom: 5px;   
+}
+
+.social img{
+    display: flex;
+    flex-direction: row;
+    padding: 0 16px;
+    padding-bottom: 10px;
+    align-self: center;
+    width: 34px;
+    height: 34px;
+}
+
+
 @media only screen and (min-width: 1024px) {
 
 
     .footer {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         background-color: #AACE9B;
+        align-items: center;
+        margin-top: 3%;
     }
 
     .footer h5 {
