--- a/Week-06/css/login.css
+++ b/Week-06/css/login.css
@@ -107,3 +107,46 @@ body {
     border-color: #AACE9B;
     margin-top: 25px;
 }
+
+@media only screen and (min-width: 1024px) {
+    
+    form {
+        flex-basis: 50%;
+    }
+    
+    .form-container {
+      display: flex;
+      justify-content: space-around;
+    }
+    
+    .footer {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      background-color: #AACE9B;
+    }
+  
+    .footer h5 {
+      font-size: 12px;
+      text-align: center;
+      padding: 10px;
+    }
+  
+    .social {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      padding-bottom: 5px;   
+    }
+  
+    .social img{
+      display: flex;
+      flex-direction: row;
+      padding: 0 16px;
+      align-self: center;
+      width: 34px;
+      height: 34px;
+      padding-top: 5px;
+    }
+  
+  }
