--- a/Week-06/css/sign-up.css
+++ b/Week-06/css/sign-up.css
@@ -1,22 +1,15 @@
 body {
-    width: 100vw;
-    background-color: #f4f4f4;
+  width: 100vw;
+  background-color: #f4f4f4;
 }
 
-/* .signUp {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  padding: 10px;
-} */
-
 .sign-up {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items: center;
-    text-align: left;
-    justify-content: justify;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  text-align: left;
+  justify-content: justify;
 }
 
 .title img {
@@ -43,7 +36,7 @@ body {
   font-weight: bold;
 }
 
-input[type=text], input[type=email], input[type=password], input[type=number], input[type=datetime] {
+input[type=text], input[type=email], input[type=password], input[type=number], input[type=date] {
   width: 228px;
   height: 43px;
   padding: 12px 20px;
@@ -63,7 +56,6 @@ label {
   justify-content: left;
 }
 
-
 button[type=submit] {
   background-color: #4CAF50;
   color: white;
@@ -81,11 +73,61 @@ button[type=submit] {
 button[type=submit]:hover {
   background-color: #45a049;
   }
+
+.error {
+  display: block;
+  text-align: start;
+  color: red;
+}
+
+.hidden {
+  display: none;
+}
   
 @media only screen and (min-width: 1024px) {
     
   .form-container {
     display: flex;
-    justify-content: space-around;
-  } 
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  
+  .footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: #AACE9B;
+  }
+
+  .footer h5 {
+    font-size: 12px;
+    text-align: center;
+    padding: 10px;
+  }
+
+  .social {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-bottom: 5px;   
+  }
+
+  .social img{
+    display: flex;
+    flex-direction: row;
+    padding: 0 16px;
+    align-self: center;
+    width: 34px;
+    height: 34px;
+    padding-top: 5px;
+  }
+  
+  .sign-up {
+    display: flex;
+    flex-basis: 50%;
+    flex-wrap: wrap;
+    align-items: center;
+    text-align: left;
+    justify-content: justify;
+  }
 }
