BaSP-W07-2023: Validations of Login inputs achieved. Sign Up validations on process.

--- a/Week-07/views/login.html
+++ b/Week-07/views/login.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="/Week-06/css/login.css">
-    <link rel="stylesheet" href="/Week-06/css/header.css">
-    <link rel="stylesheet" href="/Week-06/css/footer.css">
-    <link rel="stylesheet" href="/Week-06/css/reset.css">
-    <script defer src="/Week-06/js/login.js"></script>
+    <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <script defer src="../js/login.js"></script>
 </head>
 <body>
     <header>
@@ -30,11 +30,11 @@
                     </h1>
                 </div>
                 <div>
-                    <input id="email" type="text" placeholder="Email" required>
+                    <input id="email" type="text" placeholder="Email">
                     <span class="error"></span>
                 </div>    
                 <div>
-                    <input id="password" type="password" placeholder="Password" required>
+                    <input id="password" type="password" placeholder="Password">
                     <span class="error"></span>
                 </div>
                 <p class="forgotten">
