--- a/Week-07/views/sign-up.html
+++ b/Week-07/views/sign-up.html
@@ -5,26 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-    <link rel="stylesheet" href="/Week-06/css/sign-up.css">
-    <link rel="stylesheet" href="/Week-06/css/header.css">
-    <link rel="stylesheet" href="/Week-06/css/footer.css">
-    <link rel="stylesheet" href="/Week-06/css/reset.css">
-    <script src="/Week-06/js/sign-up.js"></script>
+    <link rel="stylesheet" href="../css/sign-up.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <script defer src="../js/sign-up.js"></script>
 </head>
 <body>
     <header>
         <h1 class="header-logo">
-            <a href="/Week-06/views/index.html"><img src="/Assets/Images/logo.png" alt="MegaRocket"></a>
+            <a href="../views/index.html"><img src="/Assets/Images/logo.png" alt="MegaRocket"></a>
         </h1>
         <h1 class="btn-menu">
             <img src="/Assets/Images/icon.png" alt="a menu icon">
         </h1>
     </header>
     <main>
-        <form>
+        <form id="form">
             <div class="sign-up-container">
                 <div class="title">
-                    <a href="/Week-06/views/login.html"><img class="back" src="/Assets/Images/arrow.png" alt="back"></a>
+                    <a href="../views/login.html"><img class="back" src="/Assets/Images/arrow.png" alt="back"></a>
                     <h1> 
                         Register
                     </h1>
@@ -32,57 +32,57 @@
                 <div class="form-container">
                     <div class="sign-up">
                         <label for="name">Name:</label>
-                        <input type="text" id="name" name="name" required>
+                        <input type="text" id="name" name="name">
                         <span class="error"></span>
                     </div>        
                     <div class="sign-up">
                         <label for="surname">Surname:</label>
-                        <input type="text" id="surname" name="surname" required>
+                        <input type="text" id="surname" name="surname">
                         <span class="error"></span>
                     </div>
                     <div class="sign-up">
                         <label for="Id">Id Number:</label>
-                        <input type="text" id="idNumber" name="id" required>
+                        <input type="text" id="idNumber" name="id">
                         <span class="error"></span>
                     </div>
                     <div class="sign-up">   
                         <label for="email">Email:</label>
-                        <input type="text" id="email" name="email" required>
+                        <input type="text" id="email" name="email">
                         <span class="error"></span>
                     </div>
                     <div class="sign-up"> 
                         <label for="password">Password:</label>
-                        <input type="password" id="password" name="password" required>
+                        <input type="password" id="password" name="password">
                         <span class="error"></span>
                     </div>     
                     <div class="sign-up">    
                         <label for="Date">Birth Date:</label>
-                        <input type="date" id="birth" name="birthdate" required>
+                        <input type="date" id="birth" name="birthdate">
                         <span class="error"></span>
                     </div>
                     <div class="sign-up">
                         <label for="Phone">Phone:</label>
-                        <input type="text" id="phone" name="phone-number" required>
+                        <input type="text" id="phone" name="phone-number">
                         <span class="error"></span>
                     </div>     
                     <div class="sign-up">     
                         <label for="Address">Address:</label>
-                        <input type="text" id="address" name="address" required>
+                        <input type="text" id="address" name="address">
                         <span class="error"></span>
                     </div>
                     <div class="sign-up">  
                         <label for="Location">Location:</label>
-                        <input type="text" id="location" name="location" required>
+                        <input type="text" id="location" name="location">
                         <span class="error"></span>
                     </div>     
                     <div class="sign-up">     
                         <label for="Postal">Postal Code:</label>
-                        <input type="text" id="postal" name="code" required>
+                        <input type="text" id="postal" name="code">
                         <span class="error"></span>     
                     </div>
                     <div class="sign-up">  
                         <label for="password">Confirm Password:</label>
-                        <input type="password" id="password" name="password" required>
+                        <input type="password" id="password" name="password">
                         <span class="error"></span>
                     </div>
                 </div>
